--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,7 @@
 			</footer>
 		</section>
 	<main>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/script.js"></script>
 </body>
 </html>
